--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Grounded-SAM-2"]
 	path = Grounded-SAM-2
 	url = https://github.com/IDEA-Research/Grounded-SAM-2.git
+[submodule "vggt"]
+	path = vggt
+	url = https://github.com/facebookresearch/vggt.git
